--- a/src/app/web/shared/components/athlet/athlet-register.component.html
+++ b/src/app/web/shared/components/athlet/athlet-register.component.html
@@ -26,7 +26,7 @@
         </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="full-width">
+    <mat-form-field *ngIf="registerForm.controls['get_off']" class="full-width">
         <mat-label>Метка схода</mat-label>
         <mat-select formControlName="get_off">
             <mat-option value="">--</mat-option>
